--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ski Training Scheduler</title>
+    <title>Ski Training Exercises</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,20 +13,20 @@
 
         <div id="login-form" class="max-w-sm mx-auto bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
             <h2 class="text-xl font-bold mb-4">Login</h2>
-            <div>
+            <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
                     Username
                 </label>
                 <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
             </div>
-            <div>
+            <div class="mb-6">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
                     Password
                 </label>
                 <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="Password">
                 <p id="login-error" class="text-red-500 text-xs italic hidden">Incorrect username or password.</p>
             </div>
-            <div>
+            <div class="flex items-center justify-between">
                 <button id="login-button" type="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                     Sign In
                 </button>
@@ -35,10 +35,14 @@
 
         <div id="app-container" class="hidden">
             <div class="flex justify-center mb-4">
-                <button id="add-exercise-button" type="button" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                <button id="add-exercise-button" type="button" class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mr-2">
                     Add Exercise
                 </button>
+                <button id="manage-exercises-button" type="button" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                    Manage Exercises
+                </button>
             </div>
+
             <div class="flex justify-center mb-4">
                 <button id="group-1" type="button" class="group-button bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-l focus:outline-none focus:shadow-outline">Group 1</button>
                 <button id="group-2" type="button" class="group-button bg-gray-300 hover:bg-gray-400 text-gray-700 font-bold py-2 px-4 focus:outline-none focus:shadow-outline">Group 2</button>
@@ -80,12 +84,17 @@
                         </tr>
                         <tr>
                             <td class="font-bold">Leaders</td>
-                            <td><span id="leaders"></span> <button type="button" class="edit-button" data-field="leaders">Edit</button></td>
+                            <td><input type="text" id="leaders" class="border rounded px-2 py-1 w-full" /> </td>
                         </tr>
                     </tbody>
                 </table>
                 <button type="button" class="delete-button bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded focus:outline-none focus:shadow-outline">Delete</button>
             </div>
+            <div id="exercise-list-container" class="hidden bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <h2 class="text-xl font-bold mb-4">Exercises</h2>
+                <ul id="exercise-list" class="list-none p-0"></ul>
+            </div>
+
               <div id="exercise-modal" class="fixed z-10 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true">
                 <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                     <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
@@ -100,6 +109,8 @@
                                     <div class="mt-2">
                                         <select id="exercise-select" class="mt-1 block w-full pl-3 pr-10 py-2 text-base border-gray-300 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm rounded-md">
                                             </select>
+                                          <div id="exercise-description-display" class="mt-4 p-2 border rounded">
+                                          </div>
                                     </div>
                                 </div>
                             </div>
@@ -128,7 +139,12 @@
                                     </h3>
                                     <div class="mt-2">
                                         <input type="text" id="new-exercise-name" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Enter exercise name">
-                                    </div>
+                                         <input type="hidden" id="edit-exercise-id">
+                                      </div>
+                                       <div class="mt-2">
+                                            <label for="new-exercise-description" class="block text-sm font-medium text-gray-700">Description:</label>
+                                            <textarea id="new-exercise-description" rows="4" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Enter exercise description"></textarea>
+                                        </div>
                                 </div>
                             </div>
                         </div>
@@ -145,6 +161,6 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
