--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,13 +88,9 @@
                         </tr>
                     </tbody>
                 </table>
-                <button type="button" class="delete-button bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-2 rounded focus:outline-none focus:shadow-outline">Delete</button>
-            </div>
-            <div id="exercise-list-container" class="hidden bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <h2 class="text-xl font-bold mb-4">Exercises</h2>
-                <ul id="exercise-list" class="list-none p-0"></ul>
-            </div>
+                <button id="create-schedule-button" type="button" class="hidden bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Create Schedule</button>
 
+            </div>
               <div id="exercise-modal" class="fixed z-10 inset-0 overflow-y-auto hidden" aria-labelledby="modal-title" role="dialog" aria-modal="true">
                 <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
                     <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" aria-hidden="true"></div>
@@ -158,6 +154,10 @@
                             </div>
                     </div>
                 </div>
+            </div>
+            <div id="exercise-list-container" class="hidden bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+                <h2 class="text-xl font-bold mb-4">Exercises</h2>
+                <ul id="exercise-list" class="list-none p-0"></ul>
             </div>
         </div>
     </div>
