--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ski Training Scheduler</title>
-    <link rel="stylesheet" href="output.css"> <! Local CSS -->
+    <link rel="stylesheet" href="output.css">
     <style>
         /* Custom styles (keep these minimal, rely on Tailwind) */
         body {
@@ -16,27 +16,57 @@
         .schedule-item label {
           font-weight: bold;
         }
+         .btn-base {
+            @apply py-2 px-4 rounded font-semibold; /* Base button styles */
+        }
+        .btn-primary {
+            @apply bg-blue-500 hover:bg-blue-700 text-white;
+        }
+        .btn-secondary {
+            @apply bg-gray-200 hover:bg-gray-300 text-gray-800;
+        }
+        .btn-danger {
+            @apply bg-red-500 hover:bg-red-700 text-white;
+        }
+        .btn-yellow {
+          @apply bg-yellow-500 hover:bg-yellow-700 text-white;
+        }
+
+        .input-base {
+            @apply w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500;
+        }
+        /* No longer needed
+        .exercise-item {
+            margin-bottom: 2rem;
+        }
+        */
     </style>
 </head>
 <body class="bg-gray-100">
-
-    <div class="container mx-auto p-4">  <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
+    <div class="container mx-auto p-4">
+        <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
 
         <div id="authSection" class="mb-4">
-            <input type="password" id="password" placeholder="Password" class="w-full p-2 mb-2 border rounded">
-            <button type="button" id="loginBtn" class="w-full bg-blue-500 text-white p-2 rounded hover:bg-blue-700">Login</button>
+            <input type="password" id="password" placeholder="Password" class="input-base mb-2">
+            <button type="button" id="loginBtn" class="w-full btn-base btn-primary">Login</button>
         </div>
 
         <div id="appContent" class="hidden">
-
+             <div id="loadingIndicator" class="hidden flex justify-center items-center py-4">
+               <svg class="animate-spin h-5 w-5 mr-3 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+              </svg>
+              <span>Loading...</span>
+            </div>
             <div class="flex justify-between items-center mb-4">
-                <button type="button" id="prevWeek" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">
+                <button type="button" id="prevWeek" class="btn-base btn-secondary">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
                     </svg>
                 </button>
                 <span id="currentWeekDisplay" class="text-lg font-bold"></span>
-                <button type="button" id="nextWeek" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">
+                <button type="button" id="nextWeek" class="btn-base btn-secondary">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
                     </svg>
@@ -46,74 +76,85 @@
             <div id="scheduleContainer" class="space-y-4">
                 <div class="schedule-item">
                     <label for="warmup" class="block text-sm font-medium text-gray-700">Warm-up</label>
-                    <select id="warmup" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="warmup">Details</button>
+                    <select id="warmup" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="warmup">Details</button>
                 </div>
 
                 <div class="schedule-item">
                     <label for="exercise1" class="block text-sm font-medium text-gray-700">Exercise 1</label>
-                    <select id="exercise1" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="exercise1">Details</button>
+                    <select id="exercise1" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise1">Details</button>
                 </div>
 
                 <div class="schedule-item">
                     <label for="exercise2" class="block text-sm font-medium text-gray-700">Exercise 2</label>
-                    <select id="exercise2" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="exercise2">Details</button>
+                    <select id="exercise2" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise2">Details</button>
                 </div>
 
                 <div class="schedule-item">
                     <label for="exercise3" class="block text-sm font-medium text-gray-700">Exercise 3</label>
-                    <select id="exercise3" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="exercise3">Details</button>
+                    <select id="exercise3" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise3">Details</button>
                 </div>
 
                 <div class="schedule-item">
                     <label for="mainActivity" class="block text-sm font-medium text-gray-700">Main Activity</label>
-                    <select id="mainActivity" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="mainActivity">Details</button>
+                    <select id="mainActivity" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="mainActivity">Details</button>
                 </div>
 
                 <div class="schedule-item">
                     <label for="cooldown" class="block text-sm font-medium text-gray-700">Cool-down</label>
-                    <select id="cooldown" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500"></select>
-                    <button type="button" class="show-details-button bg-gray-200 hover:bg-gray-300 text-gray-800 text-xs py-1 px-2 rounded mt-1" data-select-id="cooldown">Details</button>
+                    <select id="cooldown" class="input-base"></select>
+                    <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="cooldown">Details</button>
                 </div>
                  <div class="schedule-item">
                     <label for="leaders" class="block text-sm font-medium text-gray-700">Leaders</label>
-                    <input type="text" id="leaders" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
+                    <input type="text" id="leaders" class="input-base">
                 </div>
 
                 <div class="flex space-x-2">
-                    <button type="button" id="saveSchedule" class="flex-1 bg-green-500 text-white p-2 rounded hover:bg-green-700">Save</button>
-                    <button type="button" id="deleteSchedule" class="flex-1 bg-red-500 text-white p-2 rounded hover:bg-red-700">Delete</button>
+                    <button type="button" id="saveSchedule" class="flex-1 btn-base btn-primary">Save</button>
+                    <button type="button" id="deleteSchedule" class="flex-1 btn-base btn-danger">Delete</button>
                 </div>
             </div>
+
             <div id="exerciseDetailsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
                     <h3 id="exerciseDetailsName" class="text-lg font-medium text-gray-900 mb-2"></h3>
                     <p id="exerciseDetailsDescription" class="text-gray-700 mb-4 whitespace-pre-wrap"></p>
-                    <button type="button" id="closeExerciseDetailsModal" class="w-full bg-gray-500 text-white p-2 rounded hover:bg-gray-700">Close</button>
+                    <button type="button" id="closeExerciseDetailsModal" class="w-full btn-base btn-secondary">Close</button>
                 </div>
             </div>
-              <div class="flex justify-center items-center mt-4">
-              <button type="button" id="manageExercisesBtn" class="w-full bg-yellow-500 text-white p-2 rounded hover:bg-yellow-700">Manage Exercises</button>
+
+            <div class="flex justify-center items-center mt-4">
+              <button type="button" id="manageExercisesBtn" class="w-full btn-base btn-yellow">Manage Exercises</button>
             </div>
 
             <div id="exercisesModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
-                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
+                <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
                     <h3 class="text-lg font-medium text-gray-900 mb-4">Manage Exercises</h3>
-                    <div id="exerciseList" class="mb-4"></div>
-                    <div>
-                        <input type="text" id="newExerciseName" placeholder="Exercise Name" class="w-full p-2 mb-2 border rounded">
-                        <input type="text" id="newExerciseDescription" placeholder="Description" class="w-full p-2 mb-2 border rounded">
-                        <button type="button" id="saveNewExerciseButton" class="w-full bg-green-500 text-white p-2 rounded hover:bg-green-700">Save</button>
+
+                    <!- Add New Exercise Form (Moved to Top) ->
+                    <div class="mb-4">
+                        <input type="text" id="newExerciseName" placeholder="Exercise Name" class="input-base mb-2">
+                        <input type="text" id="newExerciseDescription" placeholder="Description" class="input-base mb-2">
+                        <button type="button" id="saveNewExerciseButton" class="w-full btn-base btn-primary">Save</button>
                     </div>
-                    <button type="button" id="closeExercisesModal" class="mt-4 w-full bg-gray-500 text-white p-2 rounded hover:bg-gray-700">Close</button>
+
+                    <!- Search Input ->
+                    <input type="text" id="exerciseSearch" placeholder="Search Exercises..." class="input-base mb-4">
+
+                    <!- Exercise List (Accordion) ->
+                    <div id="exerciseList" class="mb-4"></div>
+
+                    <button type="button" id="closeExercisesModal" class="mt-4 w-full btn-base btn-secondary">Close</button>
                 </div>
             </div>
         </div>
     </div>
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
