--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                 </button>
             </div>
 
+            <div id="addScheduleForCurrentWeek" class="hidden">
+                <button type="button" id="addScheduleBtn" class="w-full btn-base btn-primary">Add Schedule for This Week</button>
+            </div>
+
             <div id="scheduleContainer" class="space-y-4">
                 <div class="schedule-item">
                     <label for="warmup" class="block text-sm font-medium text-gray-700">Warm-up</label>
