--- a/index.html
+++ b/index.html
@@ -5,45 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ski Training Scheduler</title>
     <link rel="stylesheet" href="output.css">
-    <style>
-        /* Custom styles (keep these minimal, rely on Tailwind) */
-        body {
-            font-family: sans-serif;
-        }
-        .schedule-item {
-            margin-bottom: 1rem; /* Spacing between schedule items */
-        }
-        .schedule-item label {
-          font-weight: bold;
-        }
-         .btn-base {
-            @apply py-2 px-4 rounded font-semibold; /* Base button styles */
-        }
-        .btn-primary {
-            @apply bg-blue-500 hover:bg-blue-700 text-white;
-        }
-        .btn-secondary {
-            @apply bg-gray-200 hover:bg-gray-300 text-gray-800;
-        }
-        .btn-danger {
-            @apply bg-red-500 hover:bg-red-700 text-white;
-        }
-        .btn-yellow {
-          @apply bg-yellow-500 hover:bg-yellow-700 text-white;
-        }
-
-        .input-base {
-            @apply w-full p-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500;
-        }
-        /* No longer needed
-        .exercise-item {
-            margin-bottom: 2rem;
-        }
-        */
-
-    </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100"> <body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
 
@@ -78,44 +41,44 @@
                 <button type="button" id="addScheduleBtn" class="w-full btn-base btn-primary">Add Schedule for This Week</button>
             </div>
 
-            <div id="scheduleContainer" class="space-y-4">
+            <div id="scheduleContainer" class="space-y-4 bg-card-bg rounded-lg shadow-md p-4">
                 <div class="schedule-item">
-                    <label for="warmup" class="block text-sm font-medium text-gray-700">Warm-up</label>
+                    <label for="warmup" class="block text-sm font-medium">Warm-up</label>
                     <select id="warmup" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="warmup">Details</button>
                 </div>
 
                 <div class="schedule-item">
-                    <label for="exercise1" class="block text-sm font-medium text-gray-700">Exercise 1</label>
+                    <label for="exercise1" class="block text-sm font-medium">Exercise 1</label>
                     <select id="exercise1" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise1">Details</button>
                 </div>
 
                 <div class="schedule-item">
-                    <label for="exercise2" class="block text-sm font-medium text-gray-700">Exercise 2</label>
+                    <label for="exercise2" class="block text-sm font-medium">Exercise 2</label>
                     <select id="exercise2" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise2">Details</button>
                 </div>
 
                 <div class="schedule-item">
-                    <label for="exercise3" class="block text-sm font-medium text-gray-700">Exercise 3</label>
+                    <label for="exercise3" class="block text-sm font-medium">Exercise 3</label>
                     <select id="exercise3" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="exercise3">Details</button>
                 </div>
 
                 <div class="schedule-item">
-                    <label for="mainActivity" class="block text-sm font-medium text-gray-700">Main Activity</label>
+                    <label for="mainActivity" class="block text-sm font-medium">Main Activity</label>
                     <select id="mainActivity" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="mainActivity">Details</button>
                 </div>
 
                 <div class="schedule-item">
-                    <label for="cooldown" class="block text-sm font-medium text-gray-700">Cool-down</label>
+                    <label for="cooldown" class="block text-sm font-medium">Cool-down</label>
                     <select id="cooldown" class="input-base"></select>
                     <button type="button" class="show-details-button btn-base btn-secondary text-xs mt-1" data-select-id="cooldown">Details</button>
                 </div>
                  <div class="schedule-item">
-                    <label for="leaders" class="block text-sm font-medium text-gray-700">Leaders</label>
+                    <label for="leaders" class="block text-sm font-medium">Leaders</label>
                     <input type="text" id="leaders" class="input-base">
                 </div>
 
@@ -127,8 +90,8 @@
 
             <div id="exerciseDetailsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
-                    <h3 id="exerciseDetailsName" class="text-lg font-medium text-gray-900 mb-2"></h3>
-                    <p id="exerciseDetailsDescription" class="text-gray-700 mb-4 whitespace-pre-wrap"></p>
+                    <h3 id="exerciseDetailsName" class="text-lg font-medium mb-2"></h3>
+                    <p id="exerciseDetailsDescription" class="mb-4 whitespace-pre-wrap"></p>
                     <button type="button" id="closeExerciseDetailsModal" class="w-full btn-base btn-secondary">Close</button>
                 </div>
             </div>
@@ -139,7 +102,7 @@
 
             <div id="exercisesModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
-                    <h3 class="text-lg font-medium text-gray-900 mb-4">Manage Exercises</h3>
+                    <h3 class="text-lg font-medium mb-4">Manage Exercises</h3>
 
                     <!- Add New Exercise Form (Moved to Top) ->
                     <div class="mb-4">
