--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ski Training Scheduler</title>
     <link rel="stylesheet" href="output.css">
 </head>
-<body class="bg-gray-100"> <body class="bg-gray-100">
+<body class="bg-gray-100">
     <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
 
