--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             <button type="button" id="loginBtn" class="w-full btn-base btn-primary">Login</button>
         </div>
 
+        <div id="groupSelection" class="mb-4 hidden">
+            <h2 class="text-lg font-semibold mb-2">Select Group:</h2>
+            <button type="button" id="group1Btn" class="group-button btn-base btn-primary mr-2">Group 1</button>
+            <button type="button" id="group2Btn" class="group-button btn-base btn-primary mr-2">Group 2</button>
+            <button type="button" id="group3Btn" class="group-button btn-base btn-primary">Group 3</button>
+        </div>
+
         <div id="appContent" class="hidden">
              <div id="loadingIndicator" class="hidden flex justify-center items-center py-4">
                <svg class="animate-spin h-5 w-5 mr-3 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
