--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                 </button>
             </div>
 
+            <div class="flex justify-between mb-4">
+                <button type="button" id="changeGroupBtn" class="btn-base btn-secondary">Change Group</button>
+                <button type="button" id="currentWeekBtn" class="btn-base btn-secondary">Current Week</button>
+            </div>
+
             <div id="addScheduleForCurrentWeek" class="hidden">
                 <button type="button" id="addScheduleBtn" class="w-full btn-base btn-primary">Add Schedule for This Week</button>
             </div>
