--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ski Training Scheduler</title>
     <link rel="stylesheet" href="output.css">
+    <script src="modules/ext_libs/sweetalert2.all.min.js"></script>
 </head>
-<body class="bg-gray-100">
+<body>
     <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
 
@@ -54,8 +55,8 @@
             </div>
 
             <div id="scheduleContainer" class="space-y-4 bg-card-bg rounded-lg shadow-md p-4">
-                <div id="dynamicExercises"></div>
-
+                <div id="dynamicExercises">
+                    </div>
                 <div class="schedule-item">
                    <select id="addExerciseSelect" class="input-base"></select>
                     <button type="button" id="addExerciseBtn" class="btn-base btn-primary ml-2">Add</button>
