--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="output.css">
     <script src="modules/ext_libs/sweetalert2.all.min.js"></script>
 </head>
-<body class="bg-body-bg">  <div class="container mx-auto p-4">
+<body class="bg-body-bg">
+    <div class="container mx-auto p-4">
         <h1 class="text-2xl font-bold text-center mb-4">Ski Training</h1>
 
         <div id="authSection" class="mb-4">
@@ -32,7 +33,7 @@
                     <span>Loading...</span>
                 </div>
             </div>
-            <div class="flex justify-between items-center mb-4">
+             <div class="flex justify-between items-center mb-4">
                 <button type="button" id="prevWeek" class="btn-base btn-secondary">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
@@ -76,18 +77,25 @@
 
             <div id="exerciseDetailsModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
+                    <button type="button" class="modal-close-btn">  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
                     <h3 id="exerciseDetailsName" class="text-lg font-medium mb-2"></h3>
                     <div id="exerciseDetailsDescription" class="mb-4"></div>
                     <button type="button" id="closeExerciseDetailsModal" class="w-full btn-base btn-secondary">Close</button>
                 </div>
             </div>
-
-            <div class="flex justify-center items-center mt-4">
+             <div class="flex justify-center items-center mt-4">
               <button type="button" id="manageExercisesBtn" class="w-full btn-base btn-yellow">Manage Exercises</button>
             </div>
 
             <div id="exercisesModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
+                   <button type="button" class="modal-close-btn">  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
                     <h3 class="text-lg font-medium mb-4">Manage Exercises</h3>
 
                     <div class="mb-4">
@@ -105,6 +113,10 @@
             </div>
             <div id="editExerciseModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden flex items-center justify-center">
                 <div class="relative p-5 border w-full max-w-md shadow-lg rounded-md bg-white max-h-[80vh] overflow-y-auto">
+                    <button type="button" class="modal-close-btn">  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                    </button>
                     <h3 class="text-lg font-medium mb-4">Edit Exercise</h3>
                     <input type="text" id="editExerciseName" placeholder="Exercise Name" class="input-base mb-2 w-full">
                     <textarea id="editExerciseDescription" placeholder="Description" class="input-base mb-2 w-full" rows="4"></textarea>
